fixes nav staying bold on scroll after click on mobile

--- a/src/css/story/year-nav.styl
+++ b/src/css/story/year-nav.styl
@@ -22,6 +22,9 @@
 			+mq('bp-3-5')
 				height 2.5rem
 
+			.plain
+				font-weight 500
+
 			.decade
 				cursor pointer
 				margin 0
@@ -29,9 +32,9 @@
 				set-type-size(small)
 				+mq('bp-3-5')
 					set-type-size(root)
-				&:hover
-					font-weight 700
-					cursor pointer
+					&:hover
+						font-weight 700
+						cursor pointer
 
 			.current
 				font-weight 700 !important
